--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.26.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
