--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@material-tailwind/react": "^2.1.10",
+    "@tabler/icons-react": "^3.34.1",
     "antd": "^5.26.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
